// Copyright (c) 2024 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package com.digitalasset.canton.participant.protocol.v0;

import "com/digitalasset/canton/protocol/v0/participant_transaction.proto";
import "com/digitalasset/canton/protocol/v0/participant_transfer.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "scalapb/scalapb.proto";

// LedgerSyncEvent is a canton type alias for the daml-on-x com.daml.ledger.participant.state.v2.Update
message LedgerSyncEvent {
  option (scalapb.message).companion_extends = "com.digitalasset.canton.version.StorageProtoVersion";

  oneof value {
    ConfigurationChanged configuration_changed = 1;
    ConfigurationChangeRejected configuration_change_rejected = 2;
    PartyAddedToParticipant party_added_to_participant = 3;
    PublicPackageUpload public_package_upload = 4;
    TransactionAccepted transaction_accepted = 5;
    CommandRejected command_rejected = 6;
    PartyAllocationRejected party_allocation_rejected = 7;
    PublicPackageUploadRejected public_package_upload_rejected = 8;
    TransferredOut transferred_out = 9;
    TransferredIn transferred_in = 10;
    ContractsAdded contracts_added = 11;
    ContractsPurged contracts_purged = 12;
  }
}

message ConfigurationChanged {
  string submission_id = 1;
  Configuration configuration = 2;
  string participant_id = 3;
  google.protobuf.Timestamp record_time = 4;
}

message Configuration {
  int64 generation = 1;
  TimeModel time_model = 2;
  google.protobuf.Duration max_deduplication_duration = 3;
}

message TimeModel {
  google.protobuf.Duration avg_transaction_latency = 1;
  google.protobuf.Duration min_skew = 2;
  google.protobuf.Duration max_skew = 3;
}

message ConfigurationChangeRejected {
  string submission_id = 1;
  string reason = 2;
  string participant_id = 3;
  google.protobuf.Timestamp recordTime = 4;
  Configuration proposed_configuration = 5;
}

message PartyAddedToParticipant {
  string party = 1;
  string display_name = 2;
  string participant_id = 3;
  google.protobuf.Timestamp record_time = 4;
  string submission_id = 5;
}

message PartyAllocationRejected {
  string submission_id = 1;
  string participant_id = 2;
  google.protobuf.Timestamp record_time = 3;
  string rejection_reason = 4;
}

message PublicPackageUpload {
  repeated bytes archives = 1;
  google.protobuf.StringValue source_description = 2;
  google.protobuf.Timestamp record_time = 3;
  string submission_id = 4;
}

message PublicPackageUploadRejected {
  string submission_id = 1;
  google.protobuf.Timestamp record_time = 2;
  string rejection_reason = 3;
}

message TransactionAccepted {
  CompletionInfo completion_info = 1;
  TransactionMeta transaction_meta = 2;
  bytes transaction = 3;
  string transaction_id = 4;
  google.protobuf.Timestamp record_time = 5;
  repeated DivulgedContract divulged_contracts = 6;
  BlindingInfo blinding_info = 7; // optional
  map<string, bytes> contract_metadata = 8; //optional
  repeated string hosted_witnesses = 9; // not empty in case multi-domain deployment, empty otherwise
}

message CompletionInfo {
  repeated string act_as = 1;
  string application_id = 2;
  string command_id = 3;
  com.digitalasset.canton.protocol.v0.DeduplicationPeriod optDeduplicationPeriod = 4;
  string submission_id = 5;
}

message TransactionMeta {
  google.protobuf.Timestamp ledger_time = 1;
  google.protobuf.StringValue workflow_id = 2;
  google.protobuf.Timestamp submission_time = 3;
  bytes submission_seed = 4;
  repeated string used_packages = 5;
  repeated NodeSeed node_seeds = 6;
  ByKeyNodes by_key_nodes = 7; // optional
  google.protobuf.StringValue domain_id = 8; // TODO(#13173) optional for backwards compatibility

  message ByKeyNodes {
    repeated int32 by_key_node = 1;
  }
}

message NodeSeed {
  int32 node_index = 1;
  bytes node_seed = 2;
}

message DivulgedContract {
  string contract_id = 1;
  bytes contract_inst = 2;
}

message BlindingInfo {
  map<int32, Parties> disclosure = 1;
  map<string, Parties> divulgence = 2;
}

message Parties {
  repeated string parties = 1;
}

enum CommandKind {
  Transaction = 0;
  TransferOut = 1;
  TransferIn = 2;
}

message CommandRejected {
  CompletionInfo completion_info = 1;
  google.protobuf.Timestamp record_time = 2;
  GrpcRejectionReasonTemplate rejection_reason = 3;
  // Is always a `com.daml.ledger.participant.state.v2.FinalReason`
  message GrpcRejectionReasonTemplate {
    bytes status = 1;
  }
  CommandKind command_kind = 4;
  google.protobuf.StringValue domain_id = 5; // TODO(#13173) optional for backwards compatibility
}

message TransferredOut {
  string update_id = 1;
  CompletionInfo completion_info = 2; // optional
  string submitter = 3; // optional
  google.protobuf.Timestamp record_time = 4;
  string contract_id = 5;
  repeated string contract_stakeholders = 6;
  string source_domain = 7;
  string target_domain = 8;
  google.protobuf.Timestamp transfer_in_exclusivity = 9;
  string workflow_id = 10; // optional
  string template_id = 11; // optional
  bool is_transferring_participant = 12;
  repeated string hosted_stakeholders = 13;
  int64 transfer_counter = 14;
}

message TransferredIn {
  string update_id = 1;
  CompletionInfo completion_info = 2; // optional
  string submitter = 3; // optional
  google.protobuf.Timestamp record_time = 4;
  google.protobuf.Timestamp ledger_create_time = 5;
  bytes create_node = 6;
  string creating_transaction_id = 7;
  bytes contract_metadata = 8;
  com.digitalasset.canton.protocol.v0.TransferId transfer_out_id = 9;
  string target_domain = 10;
  bool create_transaction_accepted = 11;
  string workflow_id = 12; // optional
  bool is_transferring_participant = 13;
  repeated string hosted_stakeholders = 14;
  int64 transfer_counter = 15;
}

message ContractsAdded {
  string transaction_id = 1;
  repeated bytes contracts = 2;
  string domain_id = 3;
  google.protobuf.Timestamp ledger_time = 4;
  google.protobuf.Timestamp record_time = 5;
  repeated string hosted_witnesses = 6;
  map<string, bytes> contract_metadata = 7;
  string workflow_id = 8;
}

message ContractsPurged {
  string transaction_id = 1;
  repeated bytes contracts = 2;
  string domain_id = 3;
  google.protobuf.Timestamp record_time = 4;
  repeated string hosted_witnesses = 5;
}
